Bug 52158 - Require a specific extension on module names
Summary: Require a specific extension on module names
Status: RESOLVED FIXED
Alias: None
Product: p11-glue
Classification: Unclassified
Component: p11-kit (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Stef Walter
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 44740
  Show dependency treegraph
 
Reported: 2012-07-16 15:56 UTC by Stef Walter
Modified: 2012-08-03 05:38 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Use '.module' extension on module configs (10.27 KB, patch)
2012-07-16 16:01 UTC, Stef Walter
Details | Splinter Review
Use '.module' extension on module configs (10.28 KB, patch)
2012-07-17 06:21 UTC, Stef Walter
Details | Splinter Review

Description Stef Walter 2012-07-16 15:56:03 UTC
This contribution came from Andreas Metzler...

On 2012-04-15 Andreas Metzler <ametzler at downhill.at.eu.org> wrote:
[...]
> I guess the latter ones are typical examples of growing popularity for
> the files-in-a-directory configuration and p11-kit should also require
> a specific filename pattern. How about '*-module$'? It would keep the
> gnome-keyring working.
[...]

Find attached a proof-of-concept patch, basically unchanged from
Ubuntu. As I am no programmer I still might have managed to break it,
please doublecheck carefully!

This currently breaks parts of the testsuite, which is using "one" instead
of "one-module" as module configuration filename.

cu andreas
Comment 1 Stef Walter 2012-07-16 15:58:29 UTC
Some discussion of this at bug #48154, but Andreas made some good points on the mailing list after that.
Comment 2 Stef Walter 2012-07-16 16:01:37 UTC
Created attachment 64283 [details] [review]
Use '.module' extension on module configs

* And want alphanumeric/_.- filenames
 * Currently this is just a warning, soon it will be enforced
 * The name of a module does not include the extension

Andreas Metzler and Ubuntu both worked on this patch, and I've made
some more changes.

See https://bugs.launchpad.net/ubuntu/+source/p11-kit/+bug/911436
Comment 3 Stef Walter 2012-07-16 16:02:28 UTC
David or Andreas, could one of you review this patch?
Comment 4 Stef Walter 2012-07-17 06:21:31 UTC
Created attachment 64292 [details] [review]
Use '.module' extension on module configs

* And want alphanumeric/_.- filenames
 * Currently this is just a warning, soon it will be enforced
 * The name of a module does not include the extension

Andreas Metzler and Ubuntu both worked on this patch, and I've made
some more changes.

See https://bugs.launchpad.net/ubuntu/+source/p11-kit/+bug/911436
Comment 5 Andreas Metzler 2012-07-17 13:35:50 UTC
Hello,

I have looked over the latest version of the patch and unsurprisingly have not found any issues. ;-)

Just for completeness-sake: Using .module instead of -module has the sideeffect of not matching /etc/pkcs11/modules/gnome-keyring-module.

If the behavior changes anyway, you could go for a shorter suffix.

cu andreas
Comment 6 Stef Walter 2012-07-24 04:59:01 UTC
Thanks Andreas. After waiting for comments on the mailing list, I merged this.
Comment 7 Ralf Czekalla 2012-08-03 01:32:47 UTC
With 2.20.0 the SNA acceleration worked wonderfully on my gen4 965GM notebook.
After updating to 2.20.2 X get stuck very fast after start-up with the following message:

[    33.859] (II) Loading /usr/lib/xorg/modules/drivers/intel_drv.so
[    33.859] (II) Module intel: vendor="X.Org Foundation"
[    33.859]    compiled for 1.12.3, module version = 2.20.2
[    33.859]    Module class: X.Org Video Driver
[    33.859]    ABI class: X.Org Video Driver, version 12.0
[    33.859] (II) intel: Driver for Intel Integrated Graphics Chipsets: i810,
        i810-dc100, i810e, i815, i830M, 845G, 854, 852GM/855GM, 865G, 915G,
        E7221 (i915), 915GM, 945G, 945GM, 945GME, Pineview GM, Pineview G,
        965G, G35, 965Q, 946GZ, 965GM, 965GME/GLE, G33, Q35, Q33, GM45,
...
[    33.869] (II) intel(0): Creating default Display subsection in Screen section
        "Default Screen Section" for depth/fbbpp 24/32
[    33.869] (==) intel(0): Depth 24, (--) framebuffer bpp 32
[    33.869] (==) intel(0): RGB weight 888
[    33.869] (==) intel(0): Default visual is TrueColor
[    33.869] (**) intel(0): Option "AccelMethod" "SNA"
[    33.869] (--) intel(0): Integrated Graphics Chipset: Intel(R) 965GM
[    33.870] (**) intel(0): Framebuffer tiled
[    33.870] (**) intel(0): Pixmaps tiled
[    33.870] (**) intel(0): 3D buffers tiled
[    33.870] (**) intel(0): Throttling enabled
[    33.870] (**) intel(0): Delayed flush enabled
[    33.870] (**) intel(0): "Tear free" disabled
[    33.870] (**) intel(0): Forcing per-crtc-pixmaps? no
[    33.870] (II) intel(0): Output LVDS1 has no monitor section
[    33.870] (II) intel(0): found backlight control interface acpi_video0 (type 'firmware')
[    33.912] (II) intel(0): Output VGA1 has no monitor section
[    33.920] (II) intel(0): Output DVI1 has no monitor section
[    33.920] (II) intel(0): Output TV1 has no monitor section
[    33.921] (II) intel(0): EDID for output LVDS1
...
[   184.513] [mi] EQ overflowing.  Additional events will be discarded until existing events are processed.
[   184.513]
[   184.513] Backtrace:
[   184.513] 0: /usr/bin/Xorg (xorg_backtrace+0x49) [0x81c8bf9]
[   184.513] 1: /usr/bin/Xorg (mieqEnqueue+0x22b) [0x81a6e5b]
[   184.513] 2: /usr/bin/Xorg (0x8048000+0x48375) [0x8090375]
[   184.513] 3: /usr/bin/Xorg (xf86PostMotionEventM+0x25f) [0x80ccf9f]
[   184.514] 4: /usr/bin/Xorg (xf86PostMotionEvent+0x8d) [0x80cd19d]
[   184.514] 5: /usr/lib/xorg/modules/input/synaptics_drv.so (0xb6862000+0x3afe) [0xb6865afe]
[   184.514] 6: /usr/lib/xorg/modules/input/synaptics_drv.so (0xb6862000+0x5e1e) [0xb6867e1e]
[   184.514] 7: /usr/bin/Xorg (0x8048000+0x73af1) [0x80bbaf1]
[   184.514] 8: /usr/bin/Xorg (0x8048000+0x9b412) [0x80e3412]
[   184.514] 9: (vdso) (__kernel_sigreturn+0x0) [0xb7779400]
[   184.514] 10: /lib/libc.so.6 (ioctl+0x14) [0xb73c0334]
[   184.514] 11: /usr/lib/libdrm.so.2 (drmIoctl+0x34) [0xb71c2014]
[   184.514] 12: /usr/lib/xorg/modules/drivers/intel_drv.so (0xb6dd2000+0x349e7) [0xb6e069e7]
[   184.514] 13: /usr/lib/xorg/modules/drivers/intel_drv.so (0xb6dd2000+0x35aa8) [0xb6e07aa8]
[   184.514] 14: /usr/lib/xorg/modules/drivers/intel_drv.so (0xb6dd2000+0x5ee63) [0xb6e30e63]
[   184.514] 15: /usr/lib/xorg/modules/drivers/intel_drv.so (0xb6dd2000+0x6efe5) [0xb6e40fe5]
[   184.514] 16: /usr/bin/Xorg (BlockHandler+0x56) [0x807efc6]
[   184.514] 17: /usr/bin/Xorg (WaitForSomething+0x10b) [0x81c5dab]
[   184.515] 18: /usr/bin/Xorg (0x8048000+0x32d62) [0x807ad62]
[   184.515] 19: /usr/bin/Xorg (0x8048000+0x209ba) [0x80689ba]
[   184.515] 20: /lib/libc.so.6 (__libc_start_main+0xf3) [0xb730c003]
[   184.515] 21: /usr/bin/Xorg (0x8048000+0x20ce9) [0x8068ce9]
[   184.515]
[   184.515] [mi] These backtraces from mieqEnqueue may point to a culprit higher up the stack.
[   184.515] [mi] mieq is *NOT* the cause.  It is a victim.
[   189.020] (EE) intel(0): Detected a hung GPU, disabling acceleration.
[   189.020] (EE) intel(0): When reporting this, please include i915_error_state from debugfs and the full dmesg.
[   190.679] [mi] Increasing EQ size to 512 to prevent dropped events.
[   190.680] [mi] EQ processing has resumed after 93 dropped events.
[   190.680] [mi] This may be caused my a misbehaving driver monopolizing the server's resources.
[   201.938] (II) AIGLX: Suspending AIGLX clients for VT switch

This problem is gone, if I switch back to UXA.

When I check the change log from 
http://download.opensuse.org/repositories/X11:/XOrg/openSUSE_12.1/i586/xf86-video-intel-2.20.2-21.1.i586.rpm
I see only this change, which seems to be gen4 specific and might very probable be connected. 

Thanks 
Ralf
Comment 8 Stef Walter 2012-08-03 05:38:32 UTC
Sorry Ralf, I think you got the wrong bug with your last comment.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.