Use '.module' extension on module configs

* And want alphanumeric/_.- filenames
 * Currently this is just a warning, soon it will be enforced
 * The name of a module does not include the extension

Andreas Metzler and Ubuntu both worked on this patch, and I've made
some more changes.

See https://bugs.launchpad.net/ubuntu/+source/p11-kit/+bug/911436

https://bugs.freedesktop.org/show_bug.cgi?id=52158